--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "employee-angular-ui",
+  "name": "country-angular-ui",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
-    "rxjs": "~6.5.4",
+    "bootstrap": "^4.5.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
